--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body ng-app="myApp">
 	<div class="container" ng-controller="loginController">
 		<div class="page-header">
-			<h1>Logging <small>{{currentTime}}</small></h1>
+			<h1>Logging <small> {{datenow}}  {{currentTime}}</small></h1>
 			<div class="row">
 				<div class="col-md-3">
 					<button class="btn btn-info" ng-click="add()">Add Time</button>
@@ -25,16 +25,20 @@
 			  <div class="form-group">
 			    <input type="text" ng-model="data.logout" class="form-control" id="exampleInputEmail2" placeholder="Time out" data-mask="99:99">
 			  </div>
-			  <button type="submit" class="btn btn-success" ng-click="store(data)"><i class="fa fa-check"></i></button>
+			  <div class="form-group">
+			  	<p class="label label-default totaltime">{{data.totaltime}}</p>
+			  </div>
+			  <button type="submit" class="btn btn-success" ng-click="store(data,$index)"><i class="fa fa-check"></i></button>
 			  <button type="submit" class="btn btn-danger" ng-click="remove(data,$index)"><i class="fa fa-trash"></i></button>
 			</div>
+			<hr>
+			<p>Total hours : <span class="label label-default" id="totalhours">{{totalhours}}</span></p>
 		</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 
-	<!--script src="https://cdn.jsdelivr.net/ngstorage/0.3.6/ngStorage.min.js"></script-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
